--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 .container {
+	width: 100%;
 	margin: 20px;
+	
+}
+.row, .alarmModel {
+	float: right;
+	width: 80%;
+	
+}
+.sidebar {
+	float: left;
+	width: 20%;
+	height: auto;	
+	
 }
